<?xml version="1.0"?>
<package>
  <name>ra605_descartes</name>
  <version>0.1.0</version>
  <description>First excercise of the Descartes tutorials</description>

  <maintainer email="Jonathan.Meyer@swri.org">Jonathan Meyer</maintainer>

  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/descartes/</url>

  <author email="Jonathan.Meyer@swri.org">Jonathan Meyer</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>descartes_core</build_depend>
  <build_depend>descartes_moveit</build_depend>
  <build_depend>descartes_planner</build_depend>
  <build_depend>descartes_trajectory</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>liblapack-dev</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf_conversions</build_depend>

  <run_depend>descartes_core</run_depend>
  <run_depend>descartes_moveit</run_depend>
  <run_depend>descartes_planner</run_depend>
  <run_depend>descartes_trajectory</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>liblapack-dev</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf_conversions</run_depend>

</package>
